PYIC-3844 Reinstate checks for F2F evidence